--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,64 @@
-# ----------------------
-# Environment variables
-# ----------------------
+# =========================
+# ENV FILES (SECRETS)
+# =========================
 .env
 .env.*
+!.env.example
 
-# ----------------------
-# Node dependencies
-# ----------------------
+# =========================
+# NODE / PACKAGE MANAGERS
+# =========================
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# ----------------------
-# Build outputs
-# ----------------------
+# =========================
+# BUILD OUTPUTS
+# =========================
 dist/
 build/
 out/
 
-# ----------------------
-# SQLite database
-# ----------------------
+# =========================
+# VITE / REACT
+# =========================
+.vite/
+.cache/
+
+# =========================
+# TYPESCRIPT
+# =========================
+*.tsbuildinfo
+
+# =========================
+# DATABASE FILES
+# =========================
 *.db
 *.sqlite
 *.sqlite3
 
-# ----------------------
-# TypeScript
-# ----------------------
-*.tsbuildinfo
-
-# ----------------------
-# Editor / OS files
-# ----------------------
-.vscode/
-.idea/
-.DS_Store
-Thumbs.db
-
-# ----------------------
-# Logs
-# ----------------------
-logs/
+# =========================
+# LOG FILES
+# =========================
 *.log
 
-# ----------------------
-# Coverage
-# ----------------------
+# =========================
+# OS / EDITOR
+# =========================
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# =========================
+# TEST / COVERAGE
+# =========================
 coverage/
+
+# =========================
+# TEMP FILES
+# =========================
+.tmp/
+.temp/
